Bug 324239 - Panorama creation: give first and last (used) file name automatically [patch]
Summary: Panorama creation: give first and last (used) file name automatically [patch]
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Panorama (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-29 22:14 UTC by Axel Krebs
Modified: 2016-07-10 05:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.5.0
Sentry Crash Report:


Attachments
A patch from ROSA & OpenMandriva that adds check for an empty itemsList (1.61 KB, patch)
2013-10-11 23:43 UTC, Pulfer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Krebs 2013-08-29 22:14:58 UTC
when creating panoramas in digiKam, there is only  _one_ single standard file name suggested "panorama".

I suggest doing as in HUGIN, just use "first name underscore last pics name.etc", as "DSC-1234_DSC_1239", e.g., meaning panorama is built from pic DSC 1234 through DSC_1239.



Reproducible: Always

Steps to Reproduce:
1. select several pics
2. just do panorama
3. see pre-defined nam "panorma" which doe not sa anything, but force to interfere manually.
Actual Results:  
s. above

Expected Results:  
automatically name panoramas in as spefic and clear way.
s above.
Comment 1 Benjamin Girault 2013-09-15 14:59:03 UTC
Git commit 08ced65eaa837e8c571d3d89b6a30c8693b235de by Benjamin Girault.
Committed on 15/09/2013 at 14:31.
Pushed by girault into branch 'master'.

Panorama: Better default output name

Should be the same than Hugin now
FIXED-IN: 3.5.0

M  +6    -5    panorama/importwizard/lastpage.cpp

http://commits.kde.org/kipi-plugins/08ced65eaa837e8c571d3d89b6a30c8693b235de
Comment 2 Axel Krebs 2013-09-20 18:29:44 UTC
Sounds great- thanks you for your efforts!!!!

Am 15.09.2013 14:59, schrieb Benjamin Girault:
> https://bugs.kde.org/show_bug.cgi?id=324239
>
> Benjamin Girault <benjamin.girault@gmail.com> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>               Status|UNCONFIRMED                 |RESOLVED
>     Version Fixed In|                            |3.5.0
>           Resolution|---                         |FIXED
>        Latest Commit|                            |http://commits.kde.org/kipi
>                     |                            |-plugins/08ced65eaa837e8c57
>                     |                            |1d3d89b6a30c8693b235de
>
> --- Comment #1 from Benjamin Girault <benjamin.girault@gmail.com> ---
> Git commit 08ced65eaa837e8c571d3d89b6a30c8693b235de by Benjamin Girault.
> Committed on 15/09/2013 at 14:31.
> Pushed by girault into branch 'master'.
>
> Panorama: Better default output name
>
> Should be the same than Hugin now
> FIXED-IN: 3.5.0
>
> M  +6    -5    panorama/importwizard/lastpage.cpp
>
> http://commits.kde.org/kipi-plugins/08ced65eaa837e8c571d3d89b6a30c8693b235de
>
Comment 3 Axel Krebs 2013-09-21 20:05:52 UTC
This naming procedure holds true for stitching pics too, of course!!
Comment 4 Benjamin Girault 2013-09-22 12:57:15 UTC
(In reply to comment #3)
> This naming procedure holds true for stitching pics too, of course!!

I don't want to be rude, but why wouldn't it? It's the only thing it does...

Note that this patch was actually on my todo list (it was a TODO line in the code), but of very low importance.
Comment 5 Axel Krebs 2013-09-23 07:31:52 UTC
Benjamin:

for me, panorama creation is a thing completely different to stitching 
of pic: The first combines pics horizontly, so-to-say, the seconds one 
similar to layers.

So, at first sight, it is not clear to me, if my suggestion regarding 
naming is cear for the involved programmers. They do a great job.

I just had the feeling I need to formulate more clearly. This was my 
intention.

Not to spell something "rude".

Thank you-


Axel



Am 22.09.2013 12:57, schrieb Benjamin Girault:
> https://bugs.kde.org/show_bug.cgi?id=324239
>
> Benjamin Girault <benjamin.girault@gmail.com> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |benjamin.girault@gmail.com
>
> --- Comment #4 from Benjamin Girault <benjamin.girault@gmail.com> ---
> (In reply to comment #3)
>> This naming procedure holds true for stitching pics too, of course!!
>
> I don't want to be rude, but why wouldn't it? It's the only thing it does...
>
> Note that this patch was actually on my todo list (it was a TODO line in the
> code), but of very low importance.
>
Comment 6 Benjamin Girault 2013-09-23 07:46:20 UTC
(In reply to comment #5)
> for me, panorama creation is a thing completely different to stitching 
> of pic: The first combines pics horizontly, so-to-say, the seconds one 
> similar to layers.

Panorama creation by just combining pictures side by side (the side being horizontal or vertical) is not possible, there always needs to be some overlap, hence some layers. The process of merging those overlapping pictures is called stitching.

As for several pictures from the same point of view and towards the same direction (i.e. layered pictures), this is focus stacking or exposure stacking. Panorama does none of these (but expoblending does), such that I still do not understand your comment.

> So, at first sight, it is not clear to me, if my suggestion regarding 
> naming is cear for the involved programmers. They do a great job.
> 
> I just had the feeling I need to formulate more clearly. This was my 
> intention.

Your initial bug report was clear and the vocabulary used accurate. But I'm not sure you use "panorama creation" and "stitching" correctly... I hope my comment clarifies that.
Comment 7 Pulfer 2013-10-11 23:43:43 UTC
Created attachment 82794 [details]
A patch from ROSA & OpenMandriva that adds check for an empty itemsList

d->mngr->itemsList() may be empty so accessing to d->mngr->itemsList().front().fileName() leads to segfault. Usually it happens at Panorama startup.
Comment 8 caulier.gilles 2013-10-12 04:06:14 UTC
Puller,

You propose a patch for a file which is already resolved. Are you sure that it's the good entry for it ?

Gilles Caulier
Comment 9 Pulfer 2013-10-12 04:25:56 UTC
(In reply to comment #8)
> Puller,
> 
> You propose a patch for a file which is already resolved. Are you sure that
> it's the good entry for it ?

I'm not sure. Perhaps it could be better to file another bug ("Panorama 3.5.0 segfaults on startup because of git commit 08ced65eaa837e8c571d3d89b6a30c8693b235de").
Comment 10 caulier.gilles 2013-10-12 04:32:13 UTC
We will see Benjamin response here, who maintain this tool...

Gilles Caulier
Comment 11 Benjamin Girault 2013-10-19 21:15:34 UTC
Git commit 3d1a27f97906dace0ef8ab33cf7642109088926a by Benjamin Girault.
Committed on 19/10/2013 at 21:07.
Pushed by girault into branch 'master'.

Panorama: bugfix lastpage

Thanks to Pulfer for the bug report and "ROSA & OpenMandriva" for the patch is one is based on.

M  +6    -5    panorama/importwizard/lastpage.cpp

http://commits.kde.org/kipi-plugins/3d1a27f97906dace0ef8ab33cf7642109088926a
Comment 12 Benjamin Girault 2013-10-19 21:24:53 UTC
Hi Pulfer,

As you can see, I pushed a patch based on the one you provided (slightly different to use though). Thanks for reporting the bug.

As Gilles suggested, a new bug report would have been a good idea since this one is about a missing feature, and yours about a bug. As for the title you proposed, I would rather use a more descriptive one (including the fact that no image were provided to the plugin) such that other users running into the bug may select the bug report more quickly. Anyway, maybe another time?

Thanks again.