Panorama: Better default output name

Should be the same than Hugin now
BUG: 324239
FIXED-IN: 3.5.0